WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288259
Fix TestWebKitAPI.WKDownload.DownloadRequestFailure after
289946@main
https://bugs.webkit.org/show_bug.cgi?id=288259
Summary
Fix TestWebKitAPI.WKDownload.DownloadRequestFailure after 289946@main
Alex Christensen
Reported
2025-02-21 16:24:03 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-21 16:24:15 PST
<
rdar://problem/145330588
>
Alex Christensen
Comment 2
2025-02-21 16:26:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41112
EWS
Comment 3
2025-02-21 21:34:24 PST
Committed
290857@main
(6a1bea9490ae): <
https://commits.webkit.org/290857@main
> Reviewed commits have been landed. Closing PR #41112 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug