Fix TestWebKitAPI.WKDownload.DownloadRequestFailure after 289946@main https://bugs.webkit.org/show_bug.cgi?id=288259 rdar://145330588

Reviewed by Ryosuke Niwa.

"ftp:///" is a URL that NSURL thinks is valid but WTF::URL thinks is invalid.
Feeding such a URL into WKWebView.startDownloadUsingRequest shouldn't crash.
It should fail gracefully like it used to.

* Source/WebKit/NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
(WebKit::NetworkDataTaskCocoa::NetworkDataTaskCocoa):

Canonical link: https://commits.webkit.org/290857@main